--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@ body {
   flex-direction: column;
   gap: 15px;
   font-family: calibri;
-  font-size: 1.4rem;
+  font-size: 1rem;
   height: calc(100vh - 20px);
   padding-bottom: 20px;
 }
 * {
   color: #fff;
-  transition: all 0.1s;
+  transition: all 0.3s;
 }
 
 ::-webkit-scrollbar {
@@ -31,6 +31,7 @@ body {
 
 #navBar {
   padding: 10px 5px;
+  font-size: large;
   width: calc(100% - 10px);
 }
 #navBar .hamBurgBtn {
@@ -38,6 +39,8 @@ body {
   left: 20px;
   top: 15px;
   scale: 1.3;
+  z-index: 4;
+  cursor: pointer;
 }
 #navBar .cheapgptMore {
   width: 100%;
@@ -47,6 +50,7 @@ body {
 }
 
 #promptArea {
+  transition: all 0.5s;
   background: #303030;
   border-radius: 25px;
   display: flex;
@@ -63,7 +67,7 @@ body {
   resize: none;
   background: inherit;
   field-sizing: content;
-  max-height: 30vh;
+  max-height: 20vh;
   width: 100%;
   padding: 15px 8px;
   border-radius: 25px 25px 0 0;
@@ -73,43 +77,160 @@ body {
   outline: none;
   border: none;
   resize: none;
-  background: #676767;
+  color: #000;
+  background: #fff;
   border-radius: 100%;
   padding: 10px;
+}
+#promptArea #submit:disabled {
+  background: #676767;
 }
 
 #chatArea {
   width: calc(100% - 30px);
-  height: 95%;
+  height: calc(100% - 150px);
   background: #212121;
+  transition: all 0.5s;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 10px 8px;
+}
+.wrapper {
   opacity: 1;
-  padding: 10px 15px;
-  overflow: auto;
   font-size: medium;
-  display: flex; /*flex*/
   flex-direction: column;
   justify-content: safe flex-start;
-  gap: 8px;
+  gap: 12px;
+  width: 100%;
+  height: calc(100% - 20px);
+  display: flex; /*flex*/
 }
 #chatArea #emptyMsg {
+  display: block;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   text-wrap-mode: nowrap;
   font-size: 1.8rem;
-  display: block;
 }
-#chatArea .msgBox {
-  border-radius: 15px;
+#chatArea .wrapper .msgBox {
   padding: 10px 15px;
   width: fit-content;
   max-height: fit-content;
 }
-#chatArea .userMsg {
+#chatArea .wrapper .userMsg {
   background: #2f2f2f;
   align-self: flex-end;
+  border-radius: 15px 15px 5px 15px;
 }
-#chatArea .gptMsg {
-  background: #676767; /*change to transparent*/
+#chatArea .wrapper .gptMsg {
+  background: transparent;
+}
+
+.moreBox {
+  user-select: none;
+  background: #2f2f2f;
+  padding: 8px;
+  border-radius: 10px;
+  position: absolute;
+  left: 50%;
+  top: 8%;
+  transform: translate(-50%, -8%);
+  font-size: large;
+  display: none;
+  text-wrap-mode: nowrap;
+  flex-direction: column;
+  box-shadow: 2px 3px 3px 1px #121212;
+}
+.moreBox div {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  margin: 10px;
+}
+
+.moreBox div > span:first-child span {
+  margin-right: 40px;
+  font-size: large;
+}
+
+.moreBox div > span:first-child i {
+  margin-right: 40px;
+  font-size: small;
+}
+.moreBox div:first-child span:last-child {
+  background: #212121;
+  padding: 5px 10px;
+  margin: auto;
+  border-radius: 40px;
+  border: 1px solid #8a8989;
+}
+
+#sideBar {
+  height: calc(100% - 20px);
+  width: calc(70vw - 20px);
+  padding: 10px;
+  background: #171717;
+  position: absolute;
+  left: -100%;
+  top: 0;
+  z-index: 3;
+  border-right: 2px solid #2f2f2f;
+  transition: all 0.5s;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+#sideBar .section_1 {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: center;
+  gap: 20px;
+  margin: 5px 0;
+  justify-content: flex-end;
+}
+
+#sideBar .section_1 div {
+  scale: 1.3;
+}
+.material-symbols-rounded {
+  cursor: pointer;
+}
+
+.dummyBtns {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  padding: 10px;
+  margin-top: 20px;
+  font-size: 1.2em;
+}
+.dummyBtns div {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 15px;
+}
+.dummyBtns div .img {
+  height: 24px;
+  scale: 1.3;
+}
+
+.chatsList {
+  margin-top: 30px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  font-size: 1.2em;
+}
+.chatsList .title {
+  cursor: pointer;
+  padding: 8px 12px;
+  border-radius: 10px;
+}
+.chatsList .title:hover {
+  background: #2f2f2f;
 }
