--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   font-size: 1rem;
   height: calc(100vh - 20px);
   padding-bottom: 20px;
+  overflow: hidden;
 }
 * {
   color: #fff;
@@ -82,9 +83,6 @@ body {
   border-radius: 100%;
   padding: 10px;
 }
-#promptArea #submit:disabled {
-  background: #676767;
-}
 
 #chatArea {
   width: calc(100% - 30px);
@@ -126,6 +124,7 @@ body {
 }
 #chatArea .wrapper .gptMsg {
   background: transparent;
+  font-size: 1.2rem;
 }
 
 .moreBox {
@@ -172,6 +171,7 @@ body {
   height: calc(100% - 20px);
   width: calc(70vw - 20px);
   padding: 10px;
+  max-width: 250px;
   background: #171717;
   position: absolute;
   left: -100%;
@@ -233,4 +233,41 @@ body {
 }
 .chatsList .title:hover {
   background: #2f2f2f;
+}
+
+#loadBubble {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+}
+#loadBubble span {
+  height: 6px;
+  width: 6px;
+  background: #fff;
+  border-radius: 100%;
+  transition: all 0.5s;
+  animation: load 0.9s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+}
+#loadBubble span:nth-child(1) {
+  animation-delay: 0.1s;
+}
+#loadBubble span:nth-child(2) {
+  animation-delay: 0.3s;
+}
+#loadBubble span:nth-child(3) {
+  animation-delay: 0.5s;
+}
+
+@keyframes load {
+  50% {
+    top: 3px;
+    transform: translateY(-3px);
+  }
+}
+
+code {
+  font-family: monospace;
 }
