--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ body {
   max-width: 250px;
   background: #171717;
   position: absolute;
-  left: -100%;
+  left: 0%;
   top: 0;
   z-index: 3;
   border-right: 2px solid #2f2f2f;
@@ -270,4 +270,15 @@ body {
 
 code {
   font-family: monospace;
+}
+
+.deleteBtn {
+  position: absolute;
+  z-index: 7;
+  background: #616161;
+  padding: 8px 10px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
