--- a/style.css
+++ b/style.css
@@ -218,6 +218,9 @@ body {
   scale: 1.3;
 }
 
+.dummyBtns div .img img {
+  border-radius: 100px;
+}
 .chatsList {
   margin-top: 30px;
   padding: 10px;
@@ -281,4 +284,8 @@ code {
   display: flex;
   flex-direction: row;
   gap: 10px;
+}
+
+.upgrade {
+  cursor: pointer;
 }
