--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body {
   padding-top: 10px;
   overflow: hidden;
 }
+svg,button,input[type="submit"] {
+  user-select: none;
+}
 * {
   color: #fff;
   transition: all 0.3s;
@@ -293,3 +296,4 @@ code {
 .upgrade {
   cursor: pointer;
 }
+
